# strategy

./: '  .clang-format  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: Engine.hpp  candle.hpp  dashboard.hpp  indicator.hpp  order.hpp  portfolio.hpp  report.hpp  ring_buffer.hpp  sma.hpp  time.hpp
src/: benchmark.cpp  main.cpp  test.cpp  viewer.cpp
test/: test_engine.cpp
